# CMPS2131

./: .gitignore  README.md  final-project.md
assignment/food-order-management-system/: CMakeLists.txt
assignment/food-order-management-system-refactored/: CMakeLists.txt  README.md  aio.cpp
assignment/food-order-management-system-refactored/headers/: Item.h  ItemQueue.h  OrderQueue.h
assignment/food-order-management-system-refactored/src/: ItemQueue.cpp  Order.cpp  OrderQueue.cpp
final-project/02-huffman-encoding/: .gitignore  02-huffman-encoding.pro  CMakeLists.txt  README.md  main.cpp
final-project/02-huffman-encoding/driver/: driver.cpp  driver.h
final-project/02-huffman-encoding/header/: CompressionUtils.h  FileInformation.h  FileUtils.h  FrequencyHashMap.h  FrequencyHashNode.h  GenerateUtils.h  HuffmanFileHeader.h
final-project/02-huffman-encoding/header/hash_map/: FrequencyHashMap.h  FrequencyHashNode.h
final-project/02-huffman-encoding/header/huffman_tree/: HuffmanNode.h  HuffmanTree.h
final-project/02-huffman-encoding/header/priority_queue/: PriorityQueue.h
final-project/02-huffman-encoding/src/: FileUtils.cpp  FrequencyHashMap.cpp
final-project/02-huffman-encoding/src/hash_map/: FrequencyHashMap.cpp
final-project/02-huffman-encoding/src/huffman_tree/: HuffmanTree.cpp  HuffmanTree.h
final-project/02-huffman-encoding/src/huffman_tree/components/: FileInformation.h  HuffmanFileHeader.h  HuffmanHeader.h
final-project/02-huffman-encoding/src/huffman_tree/hash_map/: FrequencyHashMap.cpp  FrequencyHashNode.h
final-project/02-huffman-encoding/src/huffman_tree/priority_queue/: PriorityQueue.cpp  PriorityQueue.h
final-project/02-huffman-encoding/src/priority_queue/: PriorityQueue.cpp
final-project/02-huffman-encoding/src/utils/: CompressionUtils.cpp  CompressionUtils.h  FileUtils.h  GenerateUtils.cpp  GenerateUtils.h
final-project/02-huffman-encoding/src/utils/compression/: compression_utils.cpp  compression_utils.h
final-project/02-huffman-encoding/src/utils/file/: file_utils.cpp  file_utils.h
final-project/02-huffman-encoding/src/utils/generate/: generate_utils.cpp  generate_utils.h
final-project/02-huffman-encoding/src/utils/instantiate/: instantiate_utils.cpp  instantiate_utils.h
final-project/02-huffman-encoding/test/: witw.txt
practice/hash_map/simple_hash/: CMakeLists.txt  main.cpp
practice/heap/basic-heap/: CMakeLists.txt  main.cpp
practice/heap/heap-class/: CMakeLists.txt  MaxHeap.cpp  MaxHeap.h  main.cpp
practice/heap/min-heap-class/: CMakeLists.txt  MinHeapPQ.cpp  MinHeapPQ.h  main.cpp
practice/heap/min-heap-iterative/: CMakeLists.txt  MinHeap.cpp  MinHeap.h  main.cpp
practice/linked-list/2023-1-test-coding/: CMakeLists.txt  main.cpp
practice/linked-list/deleteAllEven/: main.cpp
practice/linked-list/doubly-linked-list/: main.cpp
practice/linked-list/s-linked-list-draft/: CMakeLists.txt
practice/linked-list/singly-reverse/: CMakeLists.txt
practice/linked-lists/2023-1-test-coding/: main.cpp
practice/linked-lists/code-explanation/: CMakeLists.txt  main.cpp
practice/linked-lists/delete-showcase/: main.cpp
practice/linked-lists/deleteAllEven/: CMakeLists.txt
practice/linked-lists/doubly-linked-list/: CMakeLists.txt  main.cpp
practice/linked-lists/example-linked-list/: main.cpp
practice/linked-lists/food-order-management/: main.cpp
practice/linked-lists/queue-example/: CMakeLists.txt  main.cpp
practice/linked-lists/s-linked-list/: CMakeLists.txt  List.cpp  List.h  main.cpp
practice/linked-lists/s-linked-list-delete/: CMakeLists.txt
practice/linked-lists/s-linked-list-draft/: main.cpp
practice/linked-lists/singly-linked-list/: main.cpp  (+1 more)
practice/pointer-replace/: main.cpp
practice/pointer-review/: CMakeLists.txt
quiz/cmps2131-quiz-01/: CMakeLists.txt  deleteAllOdd.cpp  reverse.cpp
quiz/cmps2131-quiz-02/: CMakeLists.txt  main.cpp
quiz/cmps2131-quiz-03/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt  template.pro
test/cmps-2131-test-02/: CMakeLists.txt  question-01.cpp  question-02.cpp
test/cmps2131-test-01/: CMakeLists.txt  main.cpp
test/cmps2131-test-03/: CMakeLists.txt  main.cpp
test/cmps2131-test-04/: CMakeLists.txt  main.cpp
textbook/19-03-04-05-list-stack-queue/: 19-03-04-05-list-stack-queue.pro  CMakeLists.txt
textbook/19-03-05-linked-list/: 19-03-05-linked-list.pro  CMakeLists.txt
textbook/19-06-tree/: CMakeLists.txt
textbook/19-exercises/: CMakeLists.txt
textbook/19-exercises/include/: List.h  ListNode.h  Stack.h  Tree.h  TreeNode.h
textbook/19-exercises/src/: 19-06-concatenating-lists.cpp  19-07-merging-ordered-lists.cpp  19-08-random-ordered-list.cpp  19-09-reverse-copy-list.cpp  19-10-sentence-reverse-stack.cpp  19-11-palindrome-test-stack.cpp
(+64 files in other folders)
